--- a/cortex/firmware/ngv-core/ngv-core.ioc
+++ b/cortex/firmware/ngv-core/ngv-core.ioc
@@ -1,30 +1,76 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.EnableAnalogWatchDog=false
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC1.IPParameters=Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,NbrOfConversionFlag,master,DMAContinuousRequests,ContinuousConvMode,EOCSelection,ExternalTrigConv,ExternalTrigConvEdge,ClockPrescaler,Resolution,DataAlign,ScanConvMode,DiscontinuousConvMode,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=1
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-4\#ChannelRegularConversion=1
+ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.ScanConvMode=DISABLE
+ADC1.master=1
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC3.ContinuousConvMode=DISABLE
+ADC3.DMAContinuousRequests=DISABLE
+ADC3.DataAlign=ADC_DATAALIGN_RIGHT
+ADC3.DiscontinuousConvMode=DISABLE
+ADC3.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC3.EnableAnalogWatchDog=false
+ADC3.ExternalTrigConv=ADC_SOFTWARE_START
+ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog
+ADC3.InjNumberOfConversion=0
+ADC3.NbrOfConversion=1
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.Resolution=ADC_RESOLUTION_12B
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.ScanConvMode=DISABLE
 CORTEX_M7.ART_ACCLERATOR_ENABLE=1
 CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.FlashInterface=TCM_Enabled
 CORTEX_M7.IPParameters=ART_ACCLERATOR_ENABLE,CPU_ICache,CPU_DCache,FlashInterface,PREFETCH_ENABLE
 CORTEX_M7.PREFETCH_ENABLE=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F7
-Mcu.IP0=ADC3
-Mcu.IP1=CORTEX_M7
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=FATFS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SPI6
-Mcu.IP7=SYS
-Mcu.IP8=USART3
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IP0=ADC1
+Mcu.IP1=ADC3
+Mcu.IP10=USART3
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=CORTEX_M7
+Mcu.IP3=DMA
+Mcu.IP4=FATFS
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IP8=SPI6
+Mcu.IP9=SYS
+Mcu.IPNb=13
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -73,20 +119,22 @@ Mcu.Pin47=PB4
 Mcu.Pin48=PB5
 Mcu.Pin49=PB7
 Mcu.Pin5=PF5
-Mcu.Pin50=VP_FATFS_VS_Generic
-Mcu.Pin51=VP_SYS_VS_Systick
-Mcu.Pin52=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
+Mcu.Pin50=VP_ADC1_TempSens_Input
+Mcu.Pin51=VP_FATFS_VS_Generic
+Mcu.Pin52=VP_SYS_VS_Systick
+Mcu.Pin53=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
 Mcu.Pin6=PH0/OSC_IN
 Mcu.Pin7=PH1/OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=53
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
-MxCube.Version=4.25.1
-MxDb.Version=DB.4.0.251
+MxCube.Version=4.26.0
+MxDb.Version=DB.4.0.260
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
@@ -351,7 +399,7 @@ PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=2
+ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
@@ -374,7 +422,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI6_Init-SPI6-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,5-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-true,7-MX_ADC3_Init-ADC3-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI6_Init-SPI6-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -504,6 +552,8 @@ USB_DEVICE.VirtualModeFS=Msc_FS
 USB_OTG_FS.IPParameters=VirtualMode,lpm_enable
 USB_OTG_FS.VirtualMode=Device_Only
 USB_OTG_FS.lpm_enable=ENABLE
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
